--- a/presto-utils/pom.xml
+++ b/presto-utils/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
   </parent>
 
   <name>Presto - Utilities</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-utils</artifactId>
   <packaging>jar</packaging>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
