--- a/presto-couchdb/pom.xml
+++ b/presto-couchdb/pom.xml
@@ -7,7 +7,7 @@
     <version>0.3-SNAPSHOT</version>
   </parent>
 
-  <name>Presto - CouchDB implementation</name>
+  <name>Presto - CouchDB data provider implementation</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-couchdb</artifactId>
   <packaging>jar</packaging>
