--- a/presto-multi/pom.xml
+++ b/presto-multi/pom.xml
@@ -7,7 +7,7 @@
     <version>0.3-SNAPSHOT</version>
   </parent>
 
-  <name>Presto - Multi provider</name>
+  <name>Presto - Multi data provider</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-multi</artifactId>
   <packaging>jar</packaging>
