Added pesto-solr module. Renamed view resolver to couchdb-view.

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <module>presto-multi</module>
     <module>presto-jaxrs</module>
     <module>presto-utils</module>
+    <module>presto-solr</module>
   </modules>
 
   <distributionManagement>
