--- a/presto-jaxrs/pom.xml
+++ b/presto-jaxrs/pom.xml
@@ -26,13 +26,13 @@
     </dependency>
     <dependency>
       <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-server</artifactId>
-      <version>1.5</version>
+      <artifactId>jersey-servlet</artifactId>
+      <version>1.10</version>
     </dependency>
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-json</artifactId>
-      <version>1.5</version>
+      <version>1.10</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
