Renamed presto-utils to presto-jaxb.

--- a/presto-jaxrs/pom.xml
+++ b/presto-jaxrs/pom.xml
@@ -21,7 +21,7 @@
     </dependency>
     <dependency>
       <groupId>net.ontopia.presto</groupId>
-      <artifactId>presto-utils</artifactId>
+      <artifactId>presto-jaxb</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
