--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,9 @@
     <module>presto-pojo</module>
     <!--module>presto-ontopoly</module-->
     <module>presto-couchdb</module>
-    <module>presto-multi</module>
+    <!--module>presto-multi</module-->
     <module>presto-jaxrs</module>
-    <module>presto-utils</module>
+    <module>presto-jaxb</module>
     <module>presto-solr</module>
   </modules>
 
