--- a/presto-jaxb/pom.xml
+++ b/presto-jaxb/pom.xml
@@ -7,9 +7,9 @@
     <version>0.4-SNAPSHOT</version>
   </parent>
 
-  <name>Presto - Utilities</name>
+  <name>Presto - JAXB bindings for the JAX-RS API</name>
   <groupId>net.ontopia.presto</groupId>
-  <artifactId>presto-utils</artifactId>
+  <artifactId>presto-jaxb</artifactId>
   <packaging>jar</packaging>
   <version>0.4-SNAPSHOT</version>
 
