--- a/presto-pojo/pom.xml
+++ b/presto-pojo/pom.xml
@@ -7,7 +7,7 @@
     <version>0.4-SNAPSHOT</version>
   </parent>
 
-  <name>Presto - POJO schema provider implementation</name>
+  <name>Presto - POJO schema provider</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-pojo</artifactId>
   <packaging>jar</packaging>
