--- a/presto-webdemo/pom.xml
+++ b/presto-webdemo/pom.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.4-SNAPSHOT</version>
+    <version>0.4.0</version>
   </parent>
 
   <name>Presto - Web demo</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-webdemo</artifactId>
   <packaging>war</packaging>
-  <version>0.4-SNAPSHOT</version>
+  <version>0.4.0</version>
 
   <repositories>
     <repository>
