--- a/presto-webdemo/pom.xml
+++ b/presto-webdemo/pom.xml
@@ -54,6 +54,11 @@
     </dependency>
     <dependency>
       <groupId>net.ontopia.presto</groupId>
+      <artifactId>presto-riak</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.ontopia.presto</groupId>
       <artifactId>presto-jaxrs</artifactId>
       <version>${project.version}</version>
     </dependency>
