--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,6 @@
 	<artifactId>slf4j-api</artifactId>
 	<version>1.5.11</version>
       </dependency>
-      <dependency>
-	<groupId>junit</groupId>
-	<artifactId>junit</artifactId>
-	<version>4.10</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -58,6 +53,17 @@
             <source>1.6</source>
             <target>1.6</target>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <executions>
+            <execution>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
