Used mvn dependency:analyze to clean up dependencies.

--- a/presto-jaxb/pom.xml
+++ b/presto-jaxb/pom.xml
@@ -15,9 +15,12 @@
 
   <dependencies>
     <dependency>
-      <groupId>net.ontopia.presto</groupId>
-      <artifactId>presto-core</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
     </dependency>
   </dependencies>
 
