--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,19 @@
         <version>1.2.2</version>
       </dependency>
       <dependency>
+        <groupId>com.sun.jersey</groupId>
+        <artifactId>jersey-core</artifactId>
+        <version>1.11</version>
+      </dependency>
+      <dependency>
 	<groupId>org.slf4j</groupId>
 	<artifactId>slf4j-api</artifactId>
 	<version>1.5.11</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.3</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
