--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
   </distributionManagement>
 
   <scm>
-    <connection>scm:git:git://github.com/grove/presto.git</connection>
+    <connection>scm:git:git://github.com:grove/presto.git</connection>
   </scm>
 
 </project>
