--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,22 @@
       <dependency>
         <groupId>com.sun.jersey</groupId>
         <artifactId>jersey-core</artifactId>
-        <version>1.11</version>
+        <version>1.14</version>
+      </dependency>
+      <dependency>
+	<groupId>com.sun.jersey</groupId>
+	<artifactId>jersey-server</artifactId>
+        <version>1.14</version>
+      </dependency>
+      <dependency>
+	<groupId>com.sun.jersey</groupId>
+	<artifactId>jersey-json</artifactId>
+        <version>1.14</version>
+      </dependency>
+      <dependency>
+	<groupId>com.sun.jersey.contribs</groupId>
+	<artifactId>jersey-spring</artifactId>
+        <version>1.14</version>
       </dependency>
       <dependency>
 	<groupId>org.slf4j</groupId>
