--- a/presto-solr/pom.xml
+++ b/presto-solr/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0</version>
   </parent>
 
   <name>Presto - SOLR field resolver</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-solr</artifactId>
   <packaging>jar</packaging>
-  <version>0.5.0-SNAPSHOT</version>
+  <version>0.5.0</version>
 
   <dependencies>
     <dependency>
