--- a/presto-riak/pom.xml
+++ b/presto-riak/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.5.1</version>
+    <version>0.5.2-SNAPSHOT</version>
   </parent>
 
   <name>Presto - Riak data provider</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-riak</artifactId>
   <packaging>jar</packaging>
-  <version>0.5.1</version>
+  <version>0.5.2-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
