--- a/presto-webdemo/pom.xml
+++ b/presto-webdemo/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.5.3</version>
+    <version>0.5.4-SNAPSHOT</version>
   </parent>
 
   <name>Presto - Web demo</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-webdemo</artifactId>
   <packaging>war</packaging>
-  <version>0.5.3</version>
+  <version>0.5.4-SNAPSHOT</version>
 
   <repositories>
     <repository>
