--- a/presto-jaxrs/pom.xml
+++ b/presto-jaxrs/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.5.4-SNAPSHOT</version>
+    <version>0.5.4</version>
   </parent>
 
   <name>Presto - JAX-RS resources</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-jaxrs</artifactId>
   <packaging>jar</packaging>
-  <version>0.5.4-SNAPSHOT</version>
+  <version>0.5.4</version>
 
   <dependencies>
     <dependency>
