--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto</artifactId>
   <packaging>pom</packaging>
-  <version>0.6.0</version>
+  <version>0.6.1-SNAPSHOT</version>
 
   <developers>
     <developer>
