--- a/pom.xml
+++ b/pom.xml
@@ -161,8 +161,9 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.4</version>
+          <version>2.1</version>
           <configuration>
+            <goals>deploy</goals> 
             <pushChanges>false</pushChanges>
             <localCheckout>true</localCheckout> 
           </configuration>
