--- a/presto-jaxb/pom.xml
+++ b/presto-jaxb/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.6.4</version>
+    <version>0.6.5-SNAPSHOT</version>
   </parent>
 
   <name>Presto - JAXB bindings for the JAX-RS API</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-jaxb</artifactId>
   <packaging>jar</packaging>
-  <version>0.6.4</version>
+  <version>0.6.5-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
