--- a/presto-pojo/pom.xml
+++ b/presto-pojo/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>net.ontopia.presto</groupId>
     <artifactId>presto</artifactId>
-    <version>0.6.5-SNAPSHOT</version>
+    <version>0.7.0</version>
   </parent>
 
   <name>Presto - POJO schema provider</name>
   <groupId>net.ontopia.presto</groupId>
   <artifactId>presto-pojo</artifactId>
   <packaging>jar</packaging>
-  <version>0.6.5-SNAPSHOT</version>
+  <version>0.7.0</version>
 
   <dependencies>
     <dependency>
