--- a/presto-jaxrs/pom.xml
+++ b/presto-jaxrs/pom.xml
@@ -25,8 +25,8 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.sun.jersey</groupId>
-      <artifactId>jersey-core</artifactId>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
