Added initial tests for PathParser.

--- a/presto-jaxrs/pom.xml
+++ b/presto-jaxrs/pom.xml
@@ -46,6 +46,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>net.ontopia.presto</groupId>
+      <artifactId>presto-test</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
